# bot_flow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api/migrations/: 0001_create_tenants.sql  0002_create_api_keys.sql  0003_create_documents.sql  0004_rls_documents.sql  0005_app_role.sql  0006_api_key_kinds.sql  0007_conversations.sql  0008_document_upload_lifecycle.sql  0009_accounts.sql  0010_sessions.sql  0011_document_deleting_status.sql  0012_document_external_id.sql  0013_erasure_audit.sql  0014_metrics_functions.sql  0015_document_failure_reason.sql  0016_documents_pagination_index.sql  0017_password_reset_tokens.sql
crates/api/src/: accounts.rs  auth.rs  config.rs  conversation.rs  db.rs  embedding.rs  erasure.rs  error.rs  handlers.rs  lib.rs  llm.rs  mail.rs  main.rs  metrics.rs  queue.rs  rate_limit.rs  state.rs  storage.rs  widget.rs
crates/api/src/upload/: mod.rs
crates/api/tests/: ask_stream.rs  auth_matrix.rs  deletion.rs  harness_smoke.rs  ingest_erasure.rs  metrics.rs  pagination.rs  password_reset.rs  tenant_erasure.rs  tenant_isolation.rs
crates/api/tests/common/: gateway.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: chunk.rs  embedding.rs  key.rs  lib.rs  sparse.rs
crates/eval/: Cargo.toml
crates/eval/fixtures/: golden.json
crates/eval/fixtures/corpus/: billing-guide.txt  engineer-profile.md  faq.md  panduan-dukungan.md  refund-policy-v1.md  refund-policy-v2.md  security-policy.md  support-handbook.md
crates/eval/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: chunk.rs  embedding.rs  event.rs  failure.rs  lifecycle.rs  main.rs  parser.rs  reaper.rs  testsupport.rs
doc/: production-readiness.md
doc/feature/: phase-1-tenant-auth.md  phase-10-retrieval-quality.md  phase-11-ingest-gdpr.md  phase-12-tenant-erasure.md  phase-13-observability.md  phase-14-failure-classification.md  phase-15-bounded-reads.md  phase-16-account-recovery.md  phase-17-web-deployment.md  phase-18-honest-dashboard.md  phase-2-web-auth.md  phase-3-documents.md  phase-4-keys.md  phase-5-playground.md  phase-6-spend-containment.md  phase-7-widget.md  phase-8-document-deletion.md  phase-9-integration-tests.md
doc/ops/: alerts.yml
postman/: bot_flow.postman_collection.json
scripts/: backup.sh  reset.sh  restore.sh  test-setup.sh
sidecar/: parser.py
specs/: README.md  spec.md
steering/: api-standards.md  code-conventions.md  deployment-workflow.md  rag-pipeline.md  security-policies.md  tenant-isolation.md  testing-standards.md
web/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  package.json  vite.config.ts
web/src/: app.d.ts  hooks.server.ts
web/src/lib/components/: app-sidebar.svelte  nav-group.svelte  nav-user.svelte  tenant-badge.svelte
web/src/lib/features/auth/: display.ts  error-map.test.ts  error-map.ts  schema.test.ts  schema.ts
web/src/lib/features/auth/components/: forgot-password-form.svelte  login-form.svelte  reset-password-form.svelte  signup-form.svelte
web/src/lib/features/chat/: ask.test.ts  ask.ts  error-map.ts  sources.test.ts  sources.ts  sse.test.ts  sse.ts
web/src/lib/features/chat/components/: message.svelte  playground.svelte  sources-list.svelte
web/src/lib/features/dashboard/: readiness.test.ts  readiness.ts
web/src/lib/features/documents/: error-map.test.ts  error-map.ts  format.test.ts  format.ts  poll.test.ts  poll.ts  schema.test.ts  schema.ts  status.test.ts  status.ts  upload.test.ts  upload.ts
web/src/lib/features/documents/components/: document-table.svelte  pager.svelte  status-badge.svelte  upload-card.svelte
web/src/lib/features/keys/: embed.test.ts  embed.ts  error-map.test.ts  error-map.ts  schema.test.ts  schema.ts
web/src/lib/features/keys/components/: key-table.svelte  mint-form.svelte  reveal-panel.svelte
web/src/lib/server/: env.ts
web/src/lib/server/api/: auth.ts  chat.ts  client.test.ts  client.ts  documents.test.ts  documents.ts  index.ts  keys.ts  parse.ts  stream.test.ts  stream.ts
web/src/lib/server/auth/: cookies.ts  guard.ts
web/src/lib/types/: api.ts  auth.ts  documents.ts
web/src/lib/utils/: api-copy.ts  breadcrumb.test.ts  breadcrumb.ts  nav.test.ts  nav.ts  redirect.ts  uuid.test.ts  uuid.ts
web/src/routes/: +error.svelte  +page.svelte
web/src/routes/(admin)/: +layout.svelte
web/src/routes/(auth)/: +layout.server.ts  +layout.svelte
web/src/routes/(auth)/forgot-password/: +page.server.ts  +page.svelte
web/src/routes/(auth)/login/: +page.server.ts  +page.svelte
web/src/routes/(auth)/reset-password/: +page.server.ts  +page.svelte
web/src/routes/(auth)/signup/: +page.server.ts  +page.svelte
web/src/routes/(authenticated)/: +layout.server.ts  +layout.svelte
web/src/routes/(authenticated)/dashboard/: +page.server.ts  +page.svelte
web/src/routes/(authenticated)/documents/: +page.server.ts  +page.svelte
web/src/routes/(authenticated)/documents/upload-url/: +server.ts
web/src/routes/(authenticated)/keys/: +page.server.ts  +page.svelte
web/src/routes/(authenticated)/logout/: +page.server.ts
web/src/routes/(authenticated)/onboarding/api-key/: +page.server.ts  +page.svelte
web/src/routes/(authenticated)/playground/: +page.server.ts  +page.svelte
web/src/routes/(authenticated)/playground/ask/: +server.ts
web/src/routes/(authenticated)/settings/password/: +page.server.ts  +page.svelte
web/src/routes/(tenant)/dashboard/: +page.svelte
widget/: demo.html  widget.js
