[workspace]
members = ["crates/api", "crates/common", "crates/eval", "crates/worker"]
resolver = "2"

[workspace.dependencies]
common = { path = "crates/common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qdrant-client = "1.18"
# Shared so the api, worker and common agree on one TLS backend and one version.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# v5 = deterministic, name-based ids. The worker derives a Qdrant point id from
# (document_id, chunk_index) so re-processing overwrites instead of duplicating.
uuid = { version = "1", features = ["v4", "v5", "serde"] }
percent-encoding = "2"
# RabbitMQ (AMQP). lapin defaults to its own executor; the two trait crates
# below let it run on our existing tokio runtime instead of spawning a second one.
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
futures-lite = "2"
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
# Password hashing for self-serve tenant accounts (Argon2id). `std` pulls the getrandom-backed
# OsRng used to draw a per-password salt. api-only, but versioned here so it can't drift.
argon2 = { version = "0.5", features = ["std"] }
# SMTP, for password reset — the one flow that must reach a user who has lost their credential.
# rustls to match every other TLS client in the workspace (one backend, one version). `smtp://`
# (no TLS) is what the local Mailpit sink speaks; `smtps://` is what a real relay does.
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "builder",
    "hostname",
    "ring",
    "webpki-roots",
] }
# Integration tests only: `ServiceExt::oneshot` drives the real Router in-process, with no socket
# and no teardown race, while still running every layer — extractors included, which is where the
# auth bugs live. Versioned here rather than in the member crate for the usual reason.
tower = { version = "0.5", features = ["util"] }
