[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
rust-s3 = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
hex = "0.4"
argon2 = { workspace = true }
futures-util = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.6", features = ["cors"] }

# The integration suite (`crates/api/tests/`). It is #[ignore]d — `cargo test` stays offline and
# honest; `cargo test -- --ignored` needs `docker compose up -d` plus the bot_flow_test database.
[dev-dependencies]
tower = { workspace = true }
