[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
rust-s3 = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
hex = "0.4"
argon2 = { workspace = true }
lettre = { workspace = true }
futures-util = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.6", features = ["cors"] }

# The integration suite (`crates/api/tests/`). It is #[ignore]d — `cargo test` stays offline and
# honest; `cargo test -- --ignored` needs `docker compose up -d` plus the bot_flow_test database.
[dev-dependencies]
tower = { workspace = true }
# The password-reset suite mints a token row directly, because a reset token is only ever delivered
# by email and only its hash is stored — so a test cannot read one back. Note the drift is safe: if
# the handler ever hashed differently, it would compute a different hash from the harness's
# plaintext, find no row, and the tests would go RED rather than quietly passing.
sha2 = "0.10"
hex = "0.4"
