[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
percent-encoding = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-s3 = { workspace = true }
fastembed = { workspace = true }
qdrant-client = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }